# Caregiver-Copilot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  ruff.toml
backend/app/: main.py
backend/app/agent/: embeddings.py  graph.py  retrieval.py  state.py  tracing.py  v0_loop.py
backend/app/core/: config.py  database.py  security.py
backend/app/ingestion/: chunking.py  clinical_extraction.py  indexing.py  pdf_extraction.py  worker.py
backend/app/integrations/: google_calendar.py  openfda.py  rxnav.py
backend/app/models/: base.py  care_recipient.py  caregiver.py  conversation.py  document.py  enums.py  episode.py  external_api_cache.py  medication.py  provider_message.py  vital.py
backend/app/providers/: __init__.py  base.py  claude.py  factory.py  ollama.py  openai_compatible.py  types.py
backend/app/repositories/: base.py  care_recipient.py  caregiver.py  conversation.py  document.py  episode.py  medication.py  provider_message.py  vital.py
backend/eval/: comparison.py  run.py  schema.py  scoring.py
backend/migrations/: 001_extensions.sql  002_enums.sql  003_caregivers.sql  004_care_recipients.sql  005_medications.sql  006_vitals.sql  007_episodes.sql  008_documents.sql  009_provider_messages.sql  010_conversation.sql  011_external_api_cache.sql  012_updated_at_triggers.sql  013_rls_policies.sql  014_google_oauth.sql
backend/scripts/: apply_migrations.py  check_qdrant.py  init_qdrant.py  seed_demo.py  test_rls.py
backend/seed/: generate_pdfs.py  personas.py  synthea_import.py
(+95 files in other folders)
